auto_merge完成代码转程序

--- a/data_merge/Demo.ipynb
+++ b/data_merge/Demo.ipynb
@@ -113,18 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C://Users//hanning//Desktop//光电产品数据分析//Data_Processing_Software//data_merge//历史备份//FT//2023//2023_07//\n",
-      "{'SLW2016AY1TR_ SL-FASP4343C_NA_S8D1_23LF0055002-01_FT2_1P09610_202307081716 - 副本 (2).CSV', 'SLW2016AY1TR_ SL-FASP4343C_NA_S8D1_23LF0055002-01_FT2_1P09610_202307081716 - 副本.CSV'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
@@ -153,6 +144,26 @@
     "get_last_month(number=1)\n",
     "deterctor = detector(path, 10)\n",
     "print(deterctor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "path = 'C:/Users/hanning/Desktop/测试/BP/历史备份/FT/2023/2023_06\\SLW2016AY1TR_ SL-FASP4343C_NA_S8D1_23LF0053002-02_FT1_1P09610_202306261744.CSV'\n",
+    "if Path(path).exists():\n",
+    "    print('exist')"
    ]
   }
  ],
